Quartz sync: Nov 7, 2024, 3:24 PM

--- a/content/Reading Notes/认知觉醒：开启自我改变的原动力.md
+++ b/content/Reading Notes/认知觉醒：开启自我改变的原动力.md
@@ -6,34 +6,34 @@ tags:
   - Self_development
 ---
 《蛤蟆先生去看心理医生》/ 《Counselling for Toads: A Psychological Adventure 》
-# 学习量
+# What you have studied
 
-## 简介
-作者:
-背景知识:
+## Intro
+Author:
+Background:
 
-## 摘抄
+## Quotes
 
 
 %% Why do you recommend or not recommend the book? %%
-## 推荐/不推荐原因....
+## Why (not) recommended....
 
 
 
-# 思考量
-## 真知灼见？
+# Thoughts
+## Key things I learnt...
 1. 
 
 
-## 触类旁通？
+## Anythings connected?
 
 
 
-# 行动量
-## 对生活的指导
+# Actions
+## Any moves made in the life?
 
 
 
 
-# 改变量
+# Changes
 
